@@ -1,5 +1,11 @@
 Changes with Apache 2.0.25-dev
 
+  *) Add specified user attributes to the environment when using
+     mod_auth_ldap. This allows you to use mod_include to embed specified
+     user attributes in a page like so:
+     Hello <!--#echo var="AUTHENTICATE_CN"-->, how are you?
+     [Graham Leggett]
+
   *) Fix a performance problem with the worker MPM.  We now create
      transaction pools once, and re-use them for each connection.
      [Aaron Bannert <aaron@clove.org>]
